# FMS

./: run_bash_file
fms/: CMakeLists.txt  package.xml  setup.py
fms/scripts/: fms
fms/src/fms/: fms.py  uart.py
fms_demo_scripts/: auto_safety_launcher.sh  fms_demo.sh  launch_serial.sh
fms_ui/: CMakeLists.txt  package.xml  setup.py
fms_ui/scripts/: fms_ui
fms_ui/src/fms_ui/: fms_ui.py
sensors/: CMakeLists.txt  README  aggregator.launch  package.xml  setup.py  updaters.launch
sensors/scripts/: camera_driver  controls_driver  gps_driver  lidar_driver  perception_driver  slam_driver
sensors/src/sensors/: camera.py  controls.py  gps.py  lidar.py  perception.py  slam.py
serial_reciever/: CMakeLists.txt  package.xml
system_analyzers/: CMakeLists.txt  analyzer_plugins.xml  package.xml
system_analyzers/analyzer_plugins/: camera_analyzer_plugin.xml  controls_analyzer_plugin.xml  lidar_analyzer_plugin.xml  perception_analyzer_plugin.xml  slam_analyzer_plugin.xml
system_analyzers/config/: analyzers.yaml
system_analyzers/include/system_analyzers/: camera_analyzer.h  controls_analyzer.h  gps_analyzer.h  lidar_analyzer.h  perception_analyzer.h  slam_analyzer.h
system_analyzers/launch/: aggregator.launch
system_analyzers/src/analyzer/: camera_analyzer.cpp  controls_analyzer.cpp  gps_analyzer.cpp  lidar_analyzer.cpp  perception_analyzer.cpp  slam_analyzer.cpp
